# 2d-engine

./: +  .gitignore  CMakeLists.txt  compile_commands.json  vcpkg.json
.cache/clangd/index/: AABB.h.41EEEB4100D69964.idx  Circle.h.006E9EB843A6703F.idx  Manifold.h.323A05052695CD45.idx  Object.h.549F31B7BDA27527.idx  PhysicsEngine.h.6CBC8AA320AE5D8A.idx  Polygon.h.FEFE881A2C46D04E.idx  Renderer.h.09EAB54919F82734.idx  Shader.h.AB43DD9AEFC4779F.idx  main.cpp.EE2C5404533E3057.idx  utils.h.08A213E52E45FCA9.idx
shaders/: fragment_shader.glsl  vertex_shader.glsl
shaders/polygon/: fragment_shader.glsl  vertex_shader.glsl
src/: AABB.cpp  AABB.h  Box.cpp  Box.h  Circle.cpp  Circle.h  ComponentPool.h  Components.h  Object.h  Polygon.cpp  Polygon.h  Renderer.cpp  Renderer.h  Scene.h  SceneView.h  component.cpp  component.h  main.cpp  utils.cpp  utils.h
src/components/: Components.h
src/gui/: GUIManager.cpp  GUIManager.h
src/physics/: Manifold.cpp  Manifold.h  PhysicsEngine.cpp  PhysicsEngine.h  Transformations.cpp  Transformations.h  contacts.cpp  contacts.h
src/shader/: Shader.cpp  Shader.h
